| Summary: | ASTERISK-29229: Stasis/messaging: text messages not dispatched to all subscribers when using generic subscription | ||
| Reporter: | Jean Aunis - Prescom (PrescomJA) | Labels: | |
| Date Opened: | 2020-12-30 07:01:39.000-0600 | Date Closed: | 2021-01-13 09:37:52.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_stasis |
| Versions: | 16.9.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Let's have two Stasis applications : appA and appB.
- appA susbcribes to the eventSource "endpoint:SIP" - appB subscribes to the eventSource "endpoint:SIP/999" When a text message is received from SIP/999, then it is only dispatched to appA and not to appB. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-12-30 07:01:41.389-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Jean Aunis - Prescom (PrescomJA) 2020-12-30 07:55:21.469-0600 The fix is easier than I thought, I will provide a patch. By: Friendly Automation (friendly-automation) 2021-01-13 09:37:53.660-0600 Change 15347 merged by George Joseph: Stasis/messaging: tech subscriptions conflict with endpoint subscriptions. [https://gerrit.asterisk.org/c/asterisk/+/15347|https://gerrit.asterisk.org/c/asterisk/+/15347] By: Friendly Automation (friendly-automation) 2021-01-13 09:39:24.605-0600 Change 15345 merged by George Joseph: Stasis/messaging: tech subscriptions conflict with endpoint subscriptions. [https://gerrit.asterisk.org/c/asterisk/+/15345|https://gerrit.asterisk.org/c/asterisk/+/15345] By: Friendly Automation (friendly-automation) 2021-01-13 09:39:44.680-0600 Change 15301 merged by George Joseph: Stasis/messaging: tech subscriptions conflict with endpoint subscriptions. [https://gerrit.asterisk.org/c/asterisk/+/15301|https://gerrit.asterisk.org/c/asterisk/+/15301] | ||